--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,11 @@
+/* @media(max-width:992px){} */
+
+.jumbotron .container,
+.container,
+.container-fluid {
+    max-width: 768px;
+}
+
 body {
     padding-top: 50px;
     padding-bottom: 20px;
@@ -6,3 +14,4 @@ body {
 h4 {
     font-style: italic;
 }
+
