Minor updates on language

--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@ new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 <div class="container">
 <h2>Francis Tan, MBA</h2>
 <h4>
-I am an aspiring Data Scientist with a passion for all things data. With an MBA degree, I have a big picture perspective on the data-related questions that help drive business needs.
+I am an aspiring Data Scientist with a passion for all things data. With a B.S. in Computer Science and an MBA, I have the technical know-how and the big picture perspective on the data-related questions to help drive business needs.
 </h4>
 </div>
 </div>
