--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 
     <p>Please have a look at some of my work on <a href="https://github.com/ftan84">GitHub</a>.</p>
 
-    <p>You can also find some of the website work I've done below:
+    <p>You can also find some of the web work I've done below:
         <ul>
             <li><a href="http://katiaandfrancis.com" target="_blank">katiaandfrancis.com</a> - My wedding website</li>
             <li><a href="http://brixband.com" target="_blank">brixband.com</a> - Brix Big Band artist website</li>
