--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,8 @@ new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 <div class="container">
 <h2>Francis Tan, MBA</h2>
 <h4>
-I am an aspiring Data Scientist with a passion for all things data. With a B.S. in Computer Science and an MBA, I have the technical know-how and the big picture perspective on the data-related questions to help drive business needs.
+<!--I am an aspiring Data Scientist with a passion for all things data. With a B.S. in Computer Science and an MBA, I have the technical know-how and the big picture perspective on the data-related questions to help drive business needs.-->
+I am an aspiring Data Scientist with an MBA and a B.S. in Computer Science. I am passionate about data and possess the technical skills and big picture perspective to solve complex business problems.
 </h4>
 </div>
 </div>
